--- a/EjemploProyecto/view/index.html
+++ b/EjemploProyecto/view/index.html
@@ -12,7 +12,9 @@
 
 </head>
 <body>
-
+    <h1 class="titulos">Titulo</h1>
+    <h2 class="subtitulos">Subtitulo</h2>
+    <button class="btn">Boton <span class="fas fa-angle-right"></span> </button>
 
     <script src="../js/app.js"></script>
 </body>
