--- a/EjemploProyecto/view/index.html
+++ b/EjemploProyecto/view/index.html
@@ -12,6 +12,32 @@
 
 </head>
 <body>
+
+    <div class="menu-principal">
+        <div class="logo" id="logo">
+            <img src="../img/logo.png" alt="Logo">
+        </div>
+        <div class="menu-bar" id="menuBar">
+            <nav class="enlaces" id="enlaces">
+                <ul>
+                    <li><a href="">Servicios</a></li>
+                    <li><a href="">Equipo</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="sociales">
+            <span class="fab fa-facebook"></span>
+            <span class="fab fa-instagram"></span>
+            <span class="fab fa-twitter"></span>
+            <span class="fab fa-youtube"></span>
+        </div>
+    </div>
+
+
+
+
+
     <h1 class="titulos">Titulo</h1>
     <h2 class="subtitulos">Subtitulo</h2>
     <button class="btn">Boton <span class="fas fa-angle-right"></span> </button>
