Dia 2. Mnu de navegacion (Parte 1)

--- a/EjemploProyecto/view/index.html
+++ b/EjemploProyecto/view/index.html
@@ -25,15 +25,15 @@
                     <li><a href="">Contacto</a></li>
                 </ul>
             </nav>
-        </div>
-        <div class="sociales">
-            <span class="fab fa-facebook"></span>
-            <span class="fab fa-instagram"></span>
-            <span class="fab fa-twitter"></span>
-            <span class="fab fa-youtube"></span>
+       
+            <div class="sociales">
+                <a href=""><span class="fab fa-facebook"></span></a>
+                <a href=""><span class="fab fa-instagram"></span></a>
+                <a href=""><span class="fab fa-twitter"></span></a>
+                <a href=""><span class="fab fa-youtube"></span></a>
+            </div>
         </div>
     </div>
-
 
 
 
