--- a/EjemploProyecto/css/estilos.css
+++ b/EjemploProyecto/css/estilos.css
@@ -110,15 +110,16 @@ body{
     background-size: 50% 2px;
 }
 
-.menu-bar -sociales a{
+.menu-bar .sociales a{
     font-size: 16px;
     text-transform: uppercase;
     padding: 0 10px;
     font-weight: 700;
     text-decoration: none;
     color: var(--color-texto);
+    transition: all 0.5s;
 }
 
-.menu-bar -sociales a:hover{
+.menu-bar .sociales a:hover{
     color: var(--color-secundario);
 }
