--- a/EjemploProyecto/view/index.html
+++ b/EjemploProyecto/view/index.html
@@ -17,7 +17,11 @@
         <div class="logo" id="logo">
             <img src="../img/logo.png" alt="Logo">
         </div>
+
         <div class="menu-bar" id="menuBar">
+
+            <i class="fas fa-angle-right" id="btnMenuClose"></i>
+
             <nav class="enlaces" id="enlaces">
                 <ul>
                     <li><a href="">Servicios</a></li>
@@ -33,9 +37,9 @@
                 <a href=""><span class="fab fa-youtube"></span></a>
             </div>
         </div>
-    </div>
+        <i class="fas fa-bars" id="btnMenuOpen"></i>
 
-
+    </div> <!-- FIN DE MENU PRINCIPAL -->
 
 
     <h1 class="titulos">Titulo</h1>
