--- a/EjemploProyecto/view/index.html
+++ b/EjemploProyecto/view/index.html
@@ -24,19 +24,20 @@
 
             <nav class="enlaces" id="enlaces">
                 <ul>
-                    <li><a href="">Servicios</a></li>
-                    <li><a href="">Equipo</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Equipo</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
        
             <div class="sociales">
-                <a href=""><span class="fab fa-facebook"></span></a>
-                <a href=""><span class="fab fa-instagram"></span></a>
-                <a href=""><span class="fab fa-twitter"></span></a>
-                <a href=""><span class="fab fa-youtube"></span></a>
+                <a href="#"><span class="fab fa-facebook"></span></a>
+                <a href="#"><span class="fab fa-instagram"></span></a>
+                <a href="#"><span class="fab fa-twitter"></span></a>
+                <a href="#"><span class="fab fa-youtube"></span></a>
             </div>
         </div>
+
         <i class="fas fa-bars" id="btnMenuOpen"></i>
 
     </div> <!-- FIN DE MENU PRINCIPAL -->
