--- a/EjemploProyecto/view/index.html
+++ b/EjemploProyecto/view/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +12,10 @@
     <link rel="shortcut icon" href="../img/logo.png">
 
 </head>
+
 <body>
 
+    <!-- MENU PRINCIPAL -->
     <div class="menu-principal">
         <div class="logo" id="logo">
             <img src="../img/logo.png" alt="Logo">
@@ -29,7 +32,7 @@
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
-       
+
             <div class="sociales">
                 <a href="#"><span class="fab fa-facebook"></span></a>
                 <a href="#"><span class="fab fa-instagram"></span></a>
@@ -43,10 +46,147 @@
     </div> <!-- FIN DE MENU PRINCIPAL -->
 
 
-    <h1 class="titulos">Titulo</h1>
-    <h2 class="subtitulos">Subtitulo</h2>
-    <button class="btn">Boton <span class="fas fa-angle-right"></span> </button>
+    <!-- SLIDER DE PRODUCTOS -->
+    <section id="menu-productos">
+        <div class="contenedor-principal">
+            <button id="btn-izquierda"><span class="fas fa-angle-left"></span></button>
+
+            <div class="slider">
+                <div class="container-productos">
+                    <div class="descripcion-productos">
+                        <h2>Producto <b>premium</b></h2>
+                        <h1>Peperonni</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident debitis nihil incidunt
+                            quisquam ab reiciendis consequuntur iure.</p>
+
+                        <button class="btn"> ¡Solicitala aquí! <span class="fas fa-angle-right"></span></button>
+                    </div>
+
+                    <div class="imagen-productos">
+                        <img src="../img/menu/peperoni.png" alt="">
+                    </div>
+
+
+
+                </div>
+
+                <div class="container-productos">
+                    <div class="descripcion-productos">
+                        <h2>Producto <b>premium</b></h2>
+                        <h1>Especial</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident debitis nihil incidunt
+                            quisquam ab reiciendis consequuntur iure.</p>
+
+                        <button class="btn"> ¡Solicitala aquí! <span class="fas fa-angle-right"></span></button>
+                    </div>
+
+                    <div class="imagen-productos">
+                        <img src="../img/menu/especial.png" alt="">
+                    </div>
+
+
+
+                </div>
+
+                <div class="container-productos">
+                    <div class="descripcion-productos">
+                        <h2>Producto <b>básico</b></h2>
+                        <h1>Margarita</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident debitis nihil incidunt
+                            quisquam ab reiciendis consequuntur iure.</p>
+
+                        <button class="btn"> ¡Solicitala aquí! <span class="fas fa-angle-right"></span></button>
+                    </div>
+
+                    <div class="imagen-productos">
+                        <img src="../img/menu/margarita.png" alt="">
+                    </div>
+
+
+
+                </div>
+
+                <div class="container-productos">
+                    <div class="descripcion-productos">
+                        <h2>Producto <b>premium</b></h2>
+                        <h1>Americana</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident debitis nihil incidunt
+                            quisquam ab reiciendis consequuntur iure.</p>
+
+                        <button class="btn"> ¡Solicitala aquí! <span class="fas fa-angle-right"></span></button>
+                    </div>
+
+                    <div class="imagen-productos">
+                        <img src="../img/menu/americana.png" alt="">
+                    </div>
+
+
+
+                </div>
+
+                <div class="container-productos">
+                    <div class="descripcion-productos">
+                        <h2>Producto <b>especial</b></h2>
+                        <h1>Suprema</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident debitis nihil incidunt
+                            quisquam ab reiciendis consequuntur iure.</p>
+
+                        <button class="btn"> ¡Solicitala aquí! <span class="fas fa-angle-right"></span></button>
+                    </div>
+
+                    <div class="imagen-productos">
+                        <img src="../img/menu/suprema.png" alt="">
+                    </div>
+
+
+
+                </div>
+
+
+            </div>
+
+            <button id="btn-derecha"><span class="fas fa-angle-right"></span></button>
+        </div>
+    </section> <!-- FIN DE SLIDER DE PRODUCTOS -->
+
+    <!-- SECCION SERVICIOS -->
+    <section id="servicios">
+
+        <div class="servicios-titulos">
+            <h2 class="subtitulos">La mejor pizza del mundo</h2>
+            <h1 class="titulos">Bienvenidos a World Pizza</h1>
+        </div>
+
+        <div class="servicios-container">
+            <div class="imagen-central">
+                <img src="../img/mitad-mitad.png" alt="">
+            </div>
+
+            <div class="items calidad">
+                <p><span class="fas fa-pizza-slice"></span></p>
+                <p class="titulo-item">Calidad</p>
+                <p class="texto-item">Lorem ipsum dolor sit amet consectetur adipisicing elit, epellendus.</p>
+            </div>
+            <div class="items ingredientes">
+                <p><span class="fas fa-cheese"></span></p>
+                <p class="titulo-item">Ingredientes</p>
+                <p class="texto-item">Lorem ipsum dolor sit amet consectetur adipisicing elit, epellendus.</p>
+            </div>
+            <div class="items rapidez">
+                <p><span class="fas fa-clock"></span></p>
+                <p class="titulo-item">Rápidez</p>
+                <p class="texto-item">Lorem ipsum dolor sit amet consectetur adipisicing elit, epellendus.</p>
+            </div>
+            <div class="items entrega">
+                <p><span class="fas fa-shipping-fast"></span></p>
+                <p class="titulo-item">Entrega</p>
+                <p class="texto-item">Lorem ipsum dolor sit amet consectetur adipisicing elit, epellendus.</p>
+            </div>
+        </div>
+    </section>
+
 
     <script src="../js/app.js"></script>
 </body>
+
 </html>
