--- a/EjemploProyecto/view/index.html
+++ b/EjemploProyecto/view/index.html
@@ -185,6 +185,71 @@
         </div>
     </section>
 
+    <!-- SECCION PERSONAL -->
+    <section id="equipo">
+        <!-- PASO 01. la clase Persona y crear el primer perfil -->
+         <!-- PASO 02. copiar tres veces mas la división de clase persona para los demas perfiles -->
+        <div class="persona">
+            <img src="../img/perfil1.png" alt="" class="persona-imagen">
+            <div class="persona-info">
+                <h2>Jesús Alonso</h2>
+                <p>Chef Pizzero</p>
+                <div class="social-media">
+                    <a href=""> <span class="fab fa-facebook"></span></a>
+                    <a href=""> <span class="fab fa-instagram"></span></a>
+                    <a href=""> <span class="fab fa-twitter"></span></a>
+                    <a href=""> <span class="fab fa-linkedin-in"></span></a> 
+                </div>
+            </div>
+        </div>
+
+        
+        <div class="persona">
+            <img src="../img/perfil2.png" alt="" class="persona-imagen">
+            <div class="persona-info">
+                 <h2>Eliza Smith</h2>
+                 <p>Chef</p>
+                 <div class="social-media">
+                      <a href=""><span class="fab fa-facebook"></span></a>
+                      <a href=""><span class="fab fa-instagram"></span></a>
+                      <a href=""><span class="fab fa-twitter"></span></a>
+                      <a href=""><span class="fab fa-linkedin-in"></span></a>
+                 </div>
+
+            </div>
+       </div>
+
+       <div class="persona">
+            <img src="../img/perfil3.png" alt="" class="persona-imagen">
+            <div class="persona-info">
+                 <h2>Henry Griffith</h2>
+                 <p>Asistente Chef</p>
+                 <div class="social-media">
+                      <a href=""><span class="fab fa-facebook"></span></a>
+                      <a href=""><span class="fab fa-instagram"></span></a>
+                      <a href=""><span class="fab fa-twitter"></span></a>
+                      <a href=""><span class="fab fa-linkedin-in"></span></a>
+                 </div>
+
+            </div>
+       </div>
+
+       <div class="persona">
+            <img src="../img/perfil4.png" alt="" class="persona-imagen">
+            <div class="persona-info">
+                 <h2>Paulina Vega</h2>
+                 <p>Asistente</p>
+                 <div class="social-media">
+                      <a href=""><span class="fab fa-facebook"></span></a>
+                      <a href=""><span class="fab fa-instagram"></span></a>
+                      <a href=""><span class="fab fa-twitter"></span></a>
+                      <a href=""><span class="fab fa-linkedin-in"></span></a>
+                 </div>
+
+            </div>
+       </div>
+    </section>
+
 
     <script src="../js/app.js"></script>
 </body>
