--- a/EjemploProyecto/css/estilos.css
+++ b/EjemploProyecto/css/estilos.css
@@ -339,12 +339,7 @@ body {
     padding: 0 20px;
 } 
 
-
-
-
 /* SECCION DE EQUIPO */
-
-/* PASO01 */
 #equipo{
     height: 100vh;
     display: flex;
@@ -354,22 +349,17 @@ body {
     flex-grow: 1;
     overflow: hidden;
     position: relative;
-    transition: all 0.5s; /* APLICARLO CUANDO LLEGUE AL PUNTO 03*/
+    transition: all 0.5s; 
 }
 
-/* PASO 02, har la linea y mostrar en el NAVEGADOR */
 .persona-imagen{
     height: 100%;
     position: absolute;
-    
     left: 50%;
-
     transform: translateX(-50%);
-
-    filter: grayscale(80%); /*NUEVA PROPIDAD*/
+    filter: grayscale(80%); 
 }
 
-/*PASO 03, aplicar los efectos en las imagenes*/
 .persona:hover{
     flex-grow: 3;
 }
@@ -378,38 +368,28 @@ body {
     filter: grayscale(0%);
 }
 
-/*PASO 04. LOS ICONOS*/
 .persona-info{
     position: absolute;
     bottom: 10px;
-    
     width: 100%;
     text-align: center;
-
-    /*PASO 08*/
     opacity: 0; 
     transition: all 0.1s; 
 }
 
-/*PASO 08 EL OCULTAR LOS ICONOS */
 .persona:hover .persona-info{
     opacity: 1;
     bottom: 60px;
     transition-delay: 0.3s;
 }
 
-
-/*PASO 05. LOS  TITULOS*/
 .persona-info h2{
     font-size: 30px;
     color: black;
     font-weight: 600;
-
-    /*ESTO HACERLO CON LAS HERRAMIENTAS DE DESARROLLADOR*/
     text-shadow: 2px 2px 3px rgba(0,0,0,0.5);
 }
 
-/*PASO 05. EL PUESTO*/
 .persona-info p{
     color: var(--color-secundario);
     font-size: 20px;
@@ -417,31 +397,24 @@ body {
     font-style: italic;
     margin-top: 8px;
     margin-bottom: 20px;
-
     text-shadow: 2px 2px 3px rgba(255,0,0,0.5);
 }
 
-/* PASO 06. SOCIAL MEDIA ICONOS */
+
 .social-media a{
     display: inline-block;
     width: 40px;
     height: 40px;
-
     color: #fff;
     background: var(--color-secundario);
-
     line-height: 40px;
-
     border-radius: 50%;
     margin: 0 5px;
     font-size: 18px;
-
     cursor: pointer;
-
-    transition: all 0.5s; /* APLICARLO AL PUNTO 07 */
+    transition: all 0.5s;
 }
 
-/* PASO 07. EFECTO SOCIAL MEDIA ICONOS */
 .social-media a:hover{
     color: var(--color-secundario);
     background: transparent;
