--- a/EjemploProyecto/css/estilos.css
+++ b/EjemploProyecto/css/estilos.css
@@ -421,6 +421,71 @@ body {
     transform: scale(2);
 }
 
+/* SECCION DE CONTACTO */
+#contacto{
+    height: 100vh;
+    padding: 60px;
+    position: relative;
+}
+
+#formulario{
+    width: 70%;
+    margin: 50px auto;
+}
+
+.two-fiels{
+    display: flex;
+    justify-content: space-between;
+}
+
+.input-text, .input-email, .textarea{
+    border: 1px solid #b4b4b4;
+    color: grey;
+    background: white;
+    outline: none;
+    padding: 15px 60px;
+    height: 45px;
+    font-size: 16px;
+    margin-bottom: 20px;
+    transition: all 0.5s;
+}
+
+.textarea{
+    width: 100%;
+    height: 150px;
+    resize: none;
+}
+
+.input-text, .input-email{
+    width: 100%;
+}
+
+.inputConIcon{
+    position: relative;
+    width: 48%;
+}
+
+.inputConIcon i{
+    position: absolute;
+    left: 0;
+    padding: 14px 15px;
+    background: gray;
+    color: white;
+    transition: all 0.5s;
+}
+
+.inputConIcon input:focus{
+    border: 1px solid var(--color-primario);
+}
+
+.inputConIcon input:focus + i{
+    background: var(--color-primario);
+}
+
+
+
+
+
 
 
 /* MEDIA QUERYS 850 px*/
