--- a/EjemploProyecto/css/estilos.css
+++ b/EjemploProyecto/css/estilos.css
@@ -474,16 +474,46 @@ body {
     transition: all 0.5s;
 }
 
-.inputConIcon input:focus{
-    border: 1px solid var(--color-primario);
+.inputConIcon input:focus,
+.inputConIcon textarea:focus{
+     border: 1px solid var(--color-primario);
 }
 
 .inputConIcon input:focus + i{
     background: var(--color-primario);
 }
 
+.textareaIcon{
+    width: 100%;
+}
 
+.textareaIcon i{
+    background: transparent;
+    color: #888;
+    padding: 0;
+    font-size: 25px;
+    left: 17px;
+    top: 13px;
+    transition: all 0.5s;
+}
 
+.inputConIcon textarea:focus + i{
+    color: var(--color-primario);
+}
+
+.fiels-btn{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn-input{
+    padding: 15px 50px;
+}
+
+.btn-input:hover{
+    padding: 15px 65px;
+}
 
 
 
