--- a/EjemploProyecto/view/index.html
+++ b/EjemploProyecto/view/index.html
@@ -283,6 +283,30 @@
              </div>
         </form>
    </section>
+   
+     <!-- SECCION FOOTER -->
+     <footer>
+        <div class="sociales-metodo">
+             <i class="fas fa-map-marker-alt"></i>
+             <span>Lorem ipsum dolor sit amet.</span>
+        </div>
+
+        <div class="sociales-metodo">
+             <i class="fas fa-envelope"></i>
+             <span>info@worldpizza.com</span>
+        </div>
+
+        <div class="sociales-metodo">
+             <i class="fas fa-phone"></i>
+             <span>+22145223335</span>
+        </div>
+
+        <div class="sociales-metodo">
+             <i class="fab fa-twitter"></i>
+             <span>@worldpizza</span>
+        </div>
+   </footer>
+
 
     <script src="../js/app.js"></script>
 </body>
